Refactor: Fix lint errors and cleanup unused code (Phase 6)